--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 
+
 }
 body {
-    background: #ffe259;
+    background: #efe2ca;
     margin: 0;
     padding: 0;
 }
@@ -16,31 +17,42 @@ body {
 
 #numeros {
     display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(14, 0fr);
     justify-content: center;
     padding-left: 20px;
     padding-right: 20px;
 }
 
 button {
-    background-color: rgb(96, 186, 209);
+    background-color: rgb(82, 186, 212);
+    color: white;
+    width: 80px;
+    height: 80px;
+    border-radius: 50px;
+    border: 2px solid black;
+    cursor: pointer;
+    font-size:40px;
+    margin: 5px;
+}
+#instrucciones {
+    background-color: rgb(209, 96, 96);
     color: white;
     width: 100px;
     height: 100px;
-    border-radius: 50px;
+    border-radius: 10px;
     border: 2px solid black;
     cursor: pointer;
     font-size: 20px;
     margin: 5px;
 }
 
-button:hover {
-    background-color: rgb(55, 136, 64);
+
+
+/* Clase para el botón marcado en verde */
+button.clicked {
+    background-color: rgb(235, 13, 13);
+    border-color: black;
+    pointer-events: auto; /* Permite hacer clic en verde también */
 }
 
-/* Nueva clase CSS para el botón después de hacer clic */
-button.clicked {
-    background-color: green;
-    border-color: black;
-    pointer-events: none;  /* Desactiva el clic */
-}
