Modificando los estilos

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 #numeros {
     display: flex;
     display: grid;
-    grid-template-columns: repeat(14, 0fr);
+    grid-template-columns: repeat(14, 1fr);
     justify-content: center;
     padding-left: 20px;
     padding-right: 20px;
@@ -26,13 +26,13 @@ body {
 
 button {
     background-color: rgb(82, 186, 212);
-    color: white;
-    width: 80px;
-    height: 80px;
+    color: rgb(255, 255, 255);
+    width: 85px;
+    height: 85px;
     border-radius: 50px;
     border: 2px solid black;
     cursor: pointer;
-    font-size:40px;
+    font-size:35px;
     margin: 5px;
 }
 #instrucciones {
